ref link analysis Creating jdk image finish_rtgc full_gc=-1 leaf=934, linear=54195, multi=14163 finish_rtgc full_gc=-1 leaf=121, linear=115261, multi=22465 finish_rtgc full_gc=-1 leaf=13935, linear=218180, multi=32352 finish_rtgc full_gc=-1 leaf=479, linear=267012, multi=233873 finish_rtgc full_gc=-1 leaf=12666, linear=454830, multi=424223